# NYJ_Project

./: .gitconfig  .gitignore  사용 요령.txt
paper-ai.v1/: .env.example  .gitignore  Prompt.md  README.md  YoungjuNam Papers.md  anthropic_client.py  cli.py  commander.py  config.py  encrypt_key.py  interface.py  pyproject.toml  requirements.txt  style_guide.py
paper-ai.v1/SumoNetSim1.1.6/: dataset_scenario.py  watchdog-runner.py
paper-ai.v1/agents/: __init__.py  experimenter.py  idea.py  librarian.py  qwen.py  reviewer.py  writer.py
paper-ai.v1/annotations/: user_directives.md  validation_history.md
paper-ai.v1/brain/: experimenter_memory.md  idea_memory.md  librarian_memory.md  reviewer_memory.md
paper-ai.v1/cli_commands/: __init__.py  config_verify.py  smoke_test.py  usage_report.py
paper-ai.v1/config/: agents.yaml  budgets.yaml  caching.yaml  qwen_self_tune.yaml  routing.yaml  settings.yaml
paper-ai.v1/context_state/: pipeline_state.json
paper-ai.v1/core/: __init__.py  artifacts.py  blackboard.py  commander_blue_green.py  dag_executor.py  exceptions.py  litellm_bridge.py  logger.py  orchestrator.py  orchestrator_langgraph.py  paper_registry.py  paths.py  planner.py  policy_runtime.py  progress_ledger.py  qwen_observer.py  qwen_self_tune_state.py  secret_env.py  secrets_vault.py  self_upgrader.py  task_ledger.py  unlock.py  upgrade_approval.py  upgrade_check.py  usage_persist.py
paper-ai.v1/docs/: ARCHITECTURE.md  REFACTORING.md
paper-ai.v1/evaluation/: __init__.py  citation_check.py  confidence_tracker.py  selective_cove.py  vlm_figure_critique.py
paper-ai.v1/memory/: __init__.py  cache.py  corpus_store.py  qwen_facts.py  qwen_profile.py  sessions.py  skill_library.py  workflow_memory.py
paper-ai.v1/monitoring/: __init__.py  blue_green.py  watchdog.py
paper-ai.v1/output/: upgrade_state.json  usage.json
paper-ai.v1/prompts/: commander.txt  experimenter.txt  idea.txt  librarian.txt  qwen_companion.txt  reviewer.txt  writer.txt
paper-ai.v1/qwen_companion/: __init__.py  __main__.py  cli.py  self_tune.py
paper-ai.v1/retrieval/: __init__.py  citation_verifier.py  contextual_retrieval.py  hybrid_search.py  paperqa_adapter.py
paper-ai.v1/scripts/: setup_venv.sh
paper-ai.v1/secrets_tool/: __init__.py  __main__.py  cli.py
paper-ai.v1/tests/: conftest.py  test_phase1.py  test_phase2.py  test_phase3.py  test_phase4.py  test_phase5.py  (+1 more)
qwen-loop/: README.md  config.yaml  pyproject.toml  user_profile.md
(+841 files in other folders)
