[project]
name = "qwen-loop"
version = "0.3.0"
description = "Self-upgrading Qwen agent for personal assistant work"
requires-python = ">=3.10"
dependencies = [
    "ollama>=0.3.0",
    "pydantic>=2.7",
    "chromadb>=0.5",
    "sentence-transformers>=3.0",
    "pypdf>=4.3",
    "tenacity>=8.5",
    "rich>=13.7",
    "fastapi>=0.115",
    "uvicorn>=0.30",
    "pyyaml>=6.0",
    "sqlalchemy>=2.0",
    "python-docx>=1.1",
    "httpx>=0.27",
    "ddgs>=6.0",
    "markdownify>=0.13",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
# flat layout — src/ 없음
where = ["."]
include = ["qwen_loop*"]
